--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
    dio: ^5.5.0+1
    fpdart: ^1.1.0
    equatable: ^2.0.5
+   flutter_bloc: ^8.1.6
 
 dev_dependencies:
    flutter_test:
